--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # == DATASOURCE ==
 spring.datasource.url=jdbc:mysql://localhost:3306/sys
 spring.datasource.username=root
-spring.datasource.password=Hohoho70
+spring.datasource.password=ZeusFit
 # == JPA / HIBERNATE ==
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
